--- a/chapter7.tex
+++ b/chapter7.tex
@@ -1,11 +1,7 @@
 \setcounter{chapter}{6}
 \chapter{Relative tensors, ideas of volume, Green-Stokes theorems.}
 \pagebreak[4]
-<<<<<<< HEAD
-%\begin{comment}
-=======
-\begin{comment}
->>>>>>> adfdd13a74863c750c19cd7f30af5a98907dce92
+
 \section{p241 - Exercise}
 \begin{tcolorbox}
 If $b_{rs}$ is an absolute tensor, show that the determinant $\left|b_{rs}\right|$ is a relative invariant of weight $2$. What are the tensor characters of $\left|c^{rs}\right|$ and $\left|f^r_{s}\right|$?
@@ -136,7 +132,7 @@ If $T_{rs}$  is an absolute skew-symmetric tensor in a $4-$space, show that $$T_
 Be $P= T_{14}T_{23}+T_{24}T_{31}+T_{34}T_{12}$, we can write this as $P= \frac{1}{8}\delta^{ijmn}_{1234}T_{ij}T_{mn}$ 
 \begin{figure}[H]%
     \centering
-    \subfloat[]{\input{C:/MathLatex/images/fig_p247_Exa.tex}}
+    \subfloat[]{\input{D:/MathLatex/images/fig_p247_Exa.tex}}
 \caption{Permutations}
 \label{fig:fig_p247}
 \end{figure}
@@ -198,7 +194,6 @@ $$\mathbf{7.220} \quad T^n_{\ |n}= \left(\epsilon(a)a\right)^{\half(W-1)}\pdv{}{
 \end{tcolorbox}
 $$\blacklozenge$$
 \newpage
-<<<<<<< HEAD
 
 \section{p255 - Clarification}
 \begin{tcolorbox}
@@ -225,34 +220,6 @@ And using $\mathbf{4.313}:\quad \left|A_{pq}\right|= \epsilon_{s_1 s_2 \dots s_M
 $$\blacklozenge$$
 \newpage
 
-=======
-
-\section{p255 - Clarification}
-\begin{tcolorbox}
-$$\mathbf{7.304} \quad \Delta^{k_1\dots k_M}=\delta^{k_1\dots k_M}_{s_1\dots s_M}\Delta_{(1)}x^{s_1} \dots \Delta_{(M)}x^{s_M}$$ 
-\end{tcolorbox}
-Using $\mathbf{7.303}$ and noting that a permutation of columns in the matrix changes or not  the sign of its determinant depending on the sign of the permutation, we can write 
-\begin{align}\Delta^{k_1\dots k_M} &= \left|\begin{matrix}
-\Delta_{(1)}x^{k_1}&\Delta_{(1)}x^{k_2} &\dots&\Delta_{(1)}x^{k_M}\\
-\Delta_{(2)}x^{k_1}&\Delta_{(2)}x^{k_2} &\dots&\Delta_{(2)}x^{k_M}\\
-\vdots&\vdots&\vdots&\vdots\\
-\Delta_{(M)}x^{k_1}&\Delta_{(M)}x^{k_2} &\dots&\Delta_{(M)}x^{k_M}\\
-\end{matrix}\right|\\
-&= \epsilon^{k_1 k_2\dots k_m}\left|\begin{matrix}
-\Delta_{(1)}x^{1}&\Delta_{(1)}x^{2} &\dots&\Delta_{(1)}x^{M}\\
-\Delta_{(2)}x^{1}&\Delta_{(2)}x^{k_2} &\dots&\Delta_{(2)}x^{k_M}\\
-\vdots&\vdots&\vdots&\vdots\\
-\Delta_{(M)}x^{1}&\Delta_{(M)}x^{2} &\dots&\Delta_{(M)}x^{M}\\
-\end{matrix}\right|
-\end{align}
-And using $\mathbf{4.313}:\quad \left|A_{pq}\right|= \epsilon_{s_1 s_2 \dots s_M}A_{1 s_1}A_{2 s_2}\dots A_{M s_M}$:
-\begin{align}\Delta^{k_1 \dots k_M} &= \underbrace{\epsilon^{k_1 k_2\dots k_m} \epsilon_{s_1 s_2 \dots s_M}}_{\text{see (7.114)}}\Delta_{(1)}x^{s_1}\Delta_{(2)}x^{s_2} \dots \Delta_{(M)}x^{s_M}\\
-&= \delta^{k_1\dots k_M}_{s_1\dots s_M}\Delta_{(1)}x^{s_1}\Delta_{(2)}x^{s_2} \dots \Delta_{(M)}x^{s_M}
-\end{align}
-$$\blacklozenge$$
-\newpage
-
->>>>>>> adfdd13a74863c750c19cd7f30af5a98907dce92
 \section{p255 - Exercise }
 \begin{tcolorbox}
 Show that $\mathbf{7.305}$ may be written in the equivalent form
@@ -291,8 +258,8 @@ As we can see in figure $7.2$,  it's no hard to see that
 \end{align}
 \begin{figure}[H]%
     \centering
-    \subfloat[]{\input{C:/MathLatex/images/fig_p255_Exa1.tex}}\\
-    \subfloat[]{\input{C:/MathLatex/images/fig_p255_Exa2.tex}}
+    \subfloat[]{\input{D:/MathLatex/images/fig_p255_Exa1.tex}}\\
+    \subfloat[]{\input{D:/MathLatex/images/fig_p255_Exa2.tex}}
 \caption{Permutations}
 \label{fig:fig_p255}
 \end{figure}
@@ -382,9 +349,9 @@ d\tau_{(2)}^{zz}&= \underbrace{\epsilon^{11}}_{=0}\pdv{z}{\theta}\pdv{z}{\theta}
 \end{align}
 \begin{figure}[H]%
     \centering
-    \subfloat[]{\input{C:/MathLatex/images/fig_p257_Exa.tex}}\\
-    \subfloat[]{\input{C:/MathLatex/images/fig_p257_Exaxz.tex}}\\
-    \subfloat[]{\input{C:/MathLatex/images/fig_p257_Exaxy.tex}}
+    \subfloat[]{\input{D:/MathLatex/images/fig_p257_Exa.tex}}\\
+    \subfloat[]{\input{D:/MathLatex/images/fig_p257_Exaxz.tex}}\\
+    \subfloat[]{\input{D:/MathLatex/images/fig_p257_Exaxy.tex}}
 \caption{Projections of extensions}
 \label{fig:fig_p257}
 \end{figure}
@@ -403,11 +370,7 @@ It is easy to see that $\pdv{x}{u}\pdv{y}{v}-\pdv{x}{v}\pdv{y}{u}=0$, yet the su
 
 \begin{figure}[H]%
     \centering
-<<<<<<< HEAD
     \input{D:/MathLatex/images/fig_p257_Exb.tex}
-=======
-    \input{C:/MathLatex/images/fig_p257_Exb.tex}
->>>>>>> adfdd13a74863c750c19cd7f30af5a98907dce92
 \caption{A disk defined as $S: \left\{\mathbb{R}^2\rightarrow \mathbb{R}^3: \ S(u,v)= \left(\frac{u}{\sqrt{u^2+v^2+C}},\ \frac{v}{\sqrt{u^2+v^2+C}}, \ 1\right)\right\}$}
 \label{fig:fig_p257}
 \end{figure}
@@ -536,13 +499,8 @@ Remember that what we do here is just take 'slices' of a space. compare it to an
 
 \begin{figure}[H]%
     \centering
-<<<<<<< HEAD
     \subfloat[]{\input{D:/MathLatex/images/fig_p265_Exa.tex}}\\
     \subfloat[]{\input{D:/MathLatex/images/fig_p265_Exb.tex}}
-=======
-    \subfloat[]{\input{C:/MathLatex/images/fig_p265_Exa.tex}}\\
-    \subfloat[]{\input{C:/MathLatex/images/fig_p265_Exb.tex}}
->>>>>>> adfdd13a74863c750c19cd7f30af5a98907dce92
 \caption{Manifold with $ds^2=R^2\left[dr^2+\sin^2 r\left(d\theta^2+\sin^2\theta d\phi^2\right)\right]$ metric, embedded in an Euclidean $4-$space}
 \label{fig:fig_p265}
 \end{figure}
@@ -982,11 +940,6 @@ Let's define $R=\sqrt{\left (y^1\right)^2+\left( y^2\right)^2+\left( y^3\right)^
 So, $dv_{(3)}=0$ at any point of the null cone giving a zero $3-$volume everywhere on that manifold.
 $$\blacklozenge$$
 \newpage
-<<<<<<< HEAD
-%\end{comment}
-=======
-\end{comment}
->>>>>>> adfdd13a74863c750c19cd7f30af5a98907dce92
 
 \section{p279 - Exercise 8$\dagger$}
 \begin{tcolorbox}
@@ -1125,7 +1078,6 @@ $$\blacklozenge$$
 In a flat space $V_4$ there is a skew-symmetric Cartesian tensor field $F_{mn}$ satisfying the partial differential equations $F_{mn,n}=0$. Show that if $U_3$ and $W_3$ are two closed $3-$spaces in $V_4$ deformable into one another with preservation of the sense of the unit normal $n_r$, then 
 $$ \int_{U_3} \epsilon (n)F_{rs}n_sdv_{(3)} = \int_{W_3} \epsilon (n)F_{rs}n_sdv_{(3)}$$
 \end{tcolorbox}
-<<<<<<< HEAD
 The way to go is quite similar to the previous exercise. In this case we assume also that the two $4-$spaces, $U_4$ and $W_4$ enclosed by $U_3$ and $W_3$ are diffeomorphic to each other and that this diffeomorphism preserves the volume of the two shapes, giving $\int_{U_4} dv_{(4)}^{}=\int_{W_4}dv_{(4)}^{}$. \\
 From $\mathbf{7.609}$ we have (considering $T^n = \left.F_{mn}\right|_{m=M}$ as a Cartesian vector for a fixed $m=M$.): 
 \begin{align}
@@ -1139,19 +1091,383 @@ Note that raising the index in $T^n$ is allowed as $F_{mn}$ is Cartesian tensor 
 &\int_{U_4} T^n_{\ |n}d\tau_{(4)}^{} =\int_{U_4} dv_{(4)}^{}\\
 \Rightarrow \quad &\int_{U_3} \epsilon (n)T^r n_rdv_{(3)}  = \int_{U_4} dv_{(4)}^{}
 \end{align}
-The same is true for $W_4$. using the assumption $\int_{U_4} dv_{(4)}^{}=\int_{W_4}dv_{(4)}^{}$ and replacint $T^n$ by $F_{mn}$ we get $$ \int_{U_3} \epsilon (n)F_{rs}n_sdv_{(3)} = \int_{W_3} \epsilon (n)F_{rs}n_sdv_{(3)}$$
+The same is true for $W_4$. using the assumption $\int_{U_4} dv_{(4)}^{}=\int_{W_4}dv_{(4)}^{}$ and replacing $T^n$ by $F_{mn}$ we get $$ \int_{U_3} \epsilon (n)F_{rs}n_sdv_{(3)} = \int_{W_3} \epsilon (n)F_{rs}n_sdv_{(3)}$$
 $$\blacklozenge$$
 \newpage
 
 
 \section{p280 - Exercise 13}
 \begin{tcolorbox}
-In a non-metrical space $V_3$ ther is given an absolute covariant vector field $v_r$. Then the derived vector field $\omega^r =\epsilon^{rmn}v_{n,m}$ determines an invariant direction at each point of $V_3$ and hence a congruence of curves in $V_3$. A tube $T$ is chosen, composed of such curves, and $C$, $C^{'}$ are two closed curves lying in $T$, and such that they may be deformed into another without leaving $T$. Prove that
+In a non-metrical space $V_3$ there is given an absolute covariant vector field $v_r$. Then the derived vector field $\omega^r =\epsilon^{rmn}v_{n,m}$ determines an invariant direction at each point of $V_3$ and hence a congruence of curves in $V_3$. A tube $T$ is chosen, composed of such curves, and $C$, $C^{'}$ are two closed curves lying in $T$, and such that they may be deformed into another without leaving $T$. Prove that
 $$\int_{C} v_rdx^r = \int_{C^{'}} v_r dx^r$$
 the integrals being taken in senses which coincide when one curve is deformed into the other. (Note that this is a generalization of Exercise VI, No.4.) 
 \end{tcolorbox}
-=======
->>>>>>> adfdd13a74863c750c19cd7f30af5a98907dce92
+The preliminary text "\textit{In a non-metrical space $V_3$ there is given an absolute covariant vector field $v_r$. Then the derived vector field $\omega^r =\epsilon^{rmn}v_{n,m}$ determines an invariant direction at each point of $V_3$ and hence a congruence of curves in $V_3$."} is not clear to me.
+First, $\omega^r =\epsilon^{rmn}v_{n,m}$ \textit{determines an invariant direction}. What does that mean as  $\omega^r$is not a tensor as can be seen hereunder (reminder $\epsilon^{rmn}$ is a relative contravariant tensor of weight $1$):
+\begin{align}
+\omega^{'r} &=\epsilon^{'rmn}v^{'}_{n,m}\\
+&=\epsilon^{'rmn}\partial_{x^{'m}}\left(v_{k}\pdv{x^k}{x^{'n}}\right)\\
+&=\epsilon^{'rmn}\left(\pdv{v_{k}}{x^{'m}}\pdv{x^k}{x^{'n}}+ v_{k}\pdv{\pdv{x^k}{x^{'n}}}{x^{'m}}\right)\\
+&=J\epsilon^{uvw}\pdv{x^{'r}}{x^{u}}\pdv{x^{'m}}{x^{v}}\pdv{x^{'n}}{x^{w}}\pdv{x^{p}}{x^{'m}}\pdv{x^k}{x^{'n}}v_{k,p}+ v_{k}\underbrace{\epsilon^{'rmn}\pdv[2]{x^k}{x^{'n}}{x^{'m}}}_{=0}\\
+&=J\pdv{x^{'r}}{x^{u}}\epsilon^{upk}v_{k,p}\\
+&=J\omega^{u}\pdv{x^{'r}}{x^{u}}
+\end{align}
+So the assertion that $\omega^r$ is an invariant  and determines a direction is not clear to me.\\ 
+The assertion "and hence a congruence of curves in $V_3$" is also not clear for me. A congruence of curves means that there is an isometry between the two curves, which implies the notion of distance and angle and thus a need for a metric in $V_3$, which is contradictory with the given problem.
+$$\lozenge$$
+Let's thackle the proof.
+\begin{figure}[H]%
+    \centering
+    \subfloat[]{\input{D:/MathLatex/images/fig_p280_Ex13a.tex}}
+\caption{Vortice tube in non-metrical space}
+\label{fig:fig_p280a}
+\end{figure}
+Using $\mathbf{7.505}$ we can write(see figure for the naming of the different manifolds) 
+\begin{align}
+\int_{R^{'}_{(1)}}v_r d\tau_{(1)}^r - \int_{R^{}_{(1)}}v_r d\tau_{(1)}^r &= \int_{R^{'}_{(2)}}v_{r,m}d\tau_{(2)}^{rm} - \int_{R^{}_{(2)}}v_{r,m}d\tau_{(2)}^{rm}
+\end{align}
+We now claim that we can add on the right side of this expression,the term 
+\begin{align}
+ \int_{R^{T}_{(2)}}v_{r,m}d\tau_{(2)}^{rm} 
+\end{align}
+where $R^{T}_{(2)}$ is the surface of the tube bounded by the two caps $R^{}_{(2)}$ and $R^{'}_{(2)}$. We prove that this expression is zero.\\\\
 
+We have, noting that $\epsilon_{rij}\omega^r = v_{j,i}- v_{i,j}$
+\begin{align}
+2I &= \int_{R^{T}_{(2)}}v_{r,m}d\tau_{(2)}^{rm}+\int_{R^{T}_{(2)}}v_{m,r}d\tau_{(2)}^{mr}\\
+&= \int_{R^{T}_{(2)}}\left(v_{r,m}-v_{m,r}\right) d\tau_{(2)}^{rm}\\
+&= \int_{R^{T}_{(2)}}\epsilon_{rij}\omega^r d\tau_{(2)}^{ij}
+\end{align}\\
+Let's now use intrinsic parametric coordinates $\left(y^1, y^2\right)$ on the the surface $R^{T}_{(2)}$. We choose $y^1$ along the curves determined by $\hat{\omega}^r$ so that $dy^1\hat{1}_{y^1}$ is collinear with $\hat{\omega}^r$ (see figure 7.1) and can write $$\omega^r = \Omega\pdv{x^r}{y^1}$$.\\
+We use
+\begin{align}
+\left\{\begin{array}{ll}
+\mathbf{7.324}&d\tau^{ij}_{(2)} = \nu^{ij}d\tau_{(2)}\\\\
+\mathbf{7.323}&d\tau_{(2)} = \left|d_{(\beta)}y^{\alpha}\right|\\\\
+\mathbf{7.325}&\nu^{ij}=\epsilon^{\alpha_1 \alpha_2}\pdv{x^i}{y^{\alpha_1}}\pdv{x^j}{y^{\alpha_2}}
+\end{array}\right.
+\end{align}
+Writing explicitly $(11)$ with $\omega^{r}=\Omega\pdv{x^r}{y^1}$
+\begin{align}
+2I^{'} &= \int_{R^{T}_{(2)}}\epsilon_{rij}\omega^r d\tau_{(2)}^{ij}\\
+&= \int_{R^{T}_{(2)}}\epsilon_{rij}\epsilon^{\alpha_1 \alpha_2}\pdv{x^i}{y^{\alpha_1}}\pdv{x^j}{y^{\alpha_2}}\omega^r d\tau_{(2)}\\
+&= \int_{R^{T}_{(2)}} \epsilon_{rij}\left(\pdv{x^i}{y^{1}}\pdv{x^j}{y^{2}}-\pdv{x^i}{y^{2}}\pdv{x^j}{y^{1}}\right)\pdv{x^r}{y^1} \omega^rd\tau_{(2)}\\
+&= \int_{R^{T}_{(2)}}\Omega \epsilon_{rij}\left(\omega^{i}\pdv{x^j}{y^{2}}-\pdv{x^i}{y^{2}}\omega^j\right)\omega^r d\tau_{(2)}\\
+&= \int_{R^{T}_{(2)}}\Omega \epsilon_{rij}\left(\epsilon_{rij}\omega^{i}\pdv{x^j}{y^{2}}-\epsilon_{rij}\pdv{x^i}{y^{2}}\omega^j\right)\omega^r d\tau_{(2)}\\
+&= \int_{R^{T}_{(2)}}\Omega \left(\epsilon_{rij}\omega^{i}\pdv{x^j}{y^{2}}-\epsilon_{rji}\pdv{x^j}{y^{2}}\omega^i\right)\omega^r d\tau_{(2)}\\
+&= 2\int_{R^{T}_{(2)}}\Omega \underbrace{\epsilon_{rij}\omega^r\omega^{i}}_{=0}\pdv{x^j}{y^{2}} d\tau_{(2)}\\
+&=0
+\end{align}\\
+proving that $$ \int_{R^{T}_{(2)}}v_{r,m}d\tau_{(2)}^{rm}=0$$
+
+Thus $(7)$ can be written as 
+\begin{align}
+\int_{R^{'}_{(1)}}v_r d\tau_{(1)}^r - \int_{R^{}_{(1)}}v_r d\tau_{(1)}^r &= \int_{R^{'}_{(2)}}v_{r,m}d\tau_{(2)}^{rm} - \int_{R^{}_{(2)}}v_{r,m}d\tau_{(2)}^{rm}+\int_{R^{T}_{(2)}}v_{r,m}d\tau_{(2)}^{rm} 
+\end{align}
+Let's now consider the space $R_{(3)}$ bounded by the three surfaces $R^{}_{(2)}, \ R^{T}_{(2)}, \ R^{'}_{(2)},$. Lets put $R^\Sigma_{(2)}$ the union of those three surfaces.\begin{figure}[H]%
+    \centering
+    \subfloat[]{\input{D:/MathLatex/images/fig_p280_Ex13b.tex}}
+\caption{Vortice tube in non-metrical space}
+\label{fig:fig_p280b}
+\end{figure}
+
+We can write
+\begin{align}
+\int_{R^\Sigma_{(2)}}v_{r,m}d\tau_{(2)}^{rm}  &= \int_{R^{'}_{(2)}}v_{r,m}d\tau_{(2)}^{rm} + \int_{R^{}_{(2)}}v_{r,m}d\tau_{(2)}^{rm}+\int_{R^{T}_{(2)}}v_{r,m}d\tau_{(2)}^{rm} 
+\end{align}
+Note that in the second term we changed the sign. This is necessary as in $(9)$ the extension on $R^{}_{(2)}$ is taken on the "inside" of $ R_{(3)}$. So we have to change sign of one of the chosen coordinates on $R^{}_{(2)}$ in order to keep the right orientation of the extension. You can visualize this in figure $7.2(a)$: imagine that the caps of the tubes $R^{}_{(2)}$ and $R^{'}_{(2)}$ are deformed to half spheres and that the tube is  shrinked along the $\omega^r$ curves so that the two caps join and form the a sphere as the volume $R_{(3)}$. Then going form one half-sphere to the other will create jump (discontinuity) in the orientation of the elementary cell.\\
+Using $\mathbf{7.505}$ again (together with the skew-symmetry of $d\tau_{(2)}^{rm}$ and symmetry of $v_{r,mn}$ in the two last indexes) we can write $(29)$   as 
+\begin{align}
+\int_{R^\Sigma_{(2)}}v_{r,m}d\tau_{(2)}^{rm}  &= \int_{R^{}_{(3)}}v_{r,mn}d\tau_{(2)}^{rmn}\\
+&=0
+\end{align}
+
+the last step being a consequence of the skew-symmetry of $d\tau_{(2)}^{rmn}$\\
+Hence $(7)$ becomes 
+\begin{align}
+\int_{R^{'}_{(1)}}v_r d\tau_{(1)}^r - \int_{R^{}_{(1)}}v_r d\tau_{(1)}^r &= 0
+\end{align}
+proving the assertion.
 $$\blacklozenge$$
 \newpage
+
+
+\section{p280 - Exercise 14}
+\begin{tcolorbox}
+Show that, if $V_2$ is a closed subspace of non-metrical space $V_2$ and $v_r$ any absolute vector field assigned in $V_3$, then 
+$$\int_{V_2} v_{r,s}d\tau_{(2)}^{rs}=0$$
+\end{tcolorbox}
+Let's define the functions $T_{rs}= v_{r,s}$ (not necessarily a tensor) . Then with the generalized Stokes theorem (with $R_3$ being the $3-$space enclosed  by the $V_2$
+\begin{align}
+\int_{R_2} T_{rs}d\tau_{(2)}^{rs} &=\int_{R_3} T_{rs,m}d\tau_{(3)}^{rsm}  \\
+&=0
+\end{align}
+(the last step being a consequence of the skew-symmetry of the extension $d\tau_{(3)}^{rsm}$ and the symmetry of $T_{rs,m}$ for $(s,m)$.
+proving $$\int_{V_2} v_{r,s}d\tau_{(2)}^{rs}=0$$
+$$\blacklozenge$$
+\newpage
+
+\section{p280 - Exercise 15}
+\begin{tcolorbox}
+Generalize Ex. 14 to the case of a closed $V_M$ immersed in a non-metrical $V_N$ in the form  
+$$\int_{V_M} v_{k_1\dots k_{M-1},k_M}d\tau_{(M)}^{k_1\dots k_{M-1}k_{M}}=0$$
+\end{tcolorbox}
+Let's define the functions $T_{k_1\dots k_{M-1}k_M \dots k_{N-1} }= v_{k_1\dots k_{M-1},k_M \dots k_{N-1} }$ (not necessarily a tensor) . Then with the generalized Stokes theorem (with $R_N$ being the $N-$space enclosed  by the $R_{N-1}$space
+\begin{align}
+\int_{R_{N-1}} T_{k_1\dots k_{M-1}k_M \dots k_{N-1}}d\tau_{(N-1)}^{k_1\dots k_{M-1}k_M \dots k_{N-1}} &=\int_{R_{N}} T_{k_1\dots k_{M-1}k_M \dots k_{N-1},k_N }d\tau_{(N)}^{k_1\dots k_{M-1}k_M \dots k_{N-1}k_N }  \\
+&=0
+\end{align}
+(the last step being a consequence of the skew-symmetry of the extension $d\tau_{(N)}^{k_1\dots k_{M-1}k_M \dots k_{N-1}k_N } $ and the symmetry of $T_{k_1\dots k_{M-1}k_M \dots k_{N-1},k_N }$ for $(k_M \dots k_{N-1},k_N )$.
+Repeating the expression for decreasing dimensions we get with 
+$T_{k_1\dots k_{M-1}k_M  }= v_{k_1\dots k_{M-1},k_M  }$ 
+\begin{align}
+\int_{R_{M}} T_{k_1\dots k_{M-1}k_M }d\tau_{(N-1)}^{k_1\dots k_{M-1}k_M } &=\int_{R_{M+1}} T_{k_1\dots k_{M-1}k_M ,k_{M+1} }d\tau_{(M+1)}^{k_1\dots k_{M+1}}  \\
+&=0
+\end{align}
+proving $$\int_{R_{M}}  v_{k_1\dots k_{M-1},k_M  }d\tau_{(M)}^{k_1\dots k_{M-1}k_M }=0$$
+$$\blacklozenge$$
+\newpage
+
+\section{p280 - Exercise 16}
+\begin{tcolorbox}
+In a flat space of $N$ dimensions, with positive definite metric form, the volume $V$ of the interior of a sphere of radius $R$ is $V=\int \dots \int dz_1 \dots dz_N$, where $z_p$ are rectangular Cartesian coordinates, and the integration is taken over all values of the coordinates satisfying $z_pz_p \leq R^2$. Show at once that $V= KR^N$ where $K$ is independent of $R$. Further show that
+$$V=2^N R^N\int_0^{F_N} dz_N\int_0^{F_{N-1}} dz_{N-1} \dots \int_0^{F_1} dz_1\int_0^{F_1} dz_1$$
+where 
+$$F_P=\left(1-z_{P+1}^2-\dots - z_N^2\right)^{\half}$$
+and that
+$$\int_0^{F_{P+1}} \left(F_P\right)^P dz_{P+1}=\frac{\pi^{\half}}{2}\frac{\Gamma\left(\half P+1\right)}{\Gamma\left(\half P+\frac{3}{2}\right)}\left(F_{P+1}\right)^{P+1}$$ hence prove that the volume of a sphere in $N-$space is 
+$$V=\frac{\pi^{\half N} R^N}{\Gamma\left(\half P+1\right)}$$
+Check this result for $N=2$ and $N=3$.
+\end{tcolorbox}
+We prove the first question by induction.
+We know that for a $2-$ or $3-$ sphere that volume is proportional to $R^2$ or $R^3$.
+Suppose that the volume $V(N-1, R)$ of a $N-1$ sphere with radius $R$ is 
+\begin{align}
+V(N-1, R) =  K_{N-1}R^{N-1}
+\end{align}
+with $K_{N-1}$ , independent of $R$.\\
+Then, we have for a $N-$sphere
+\begin{align}
+V(N, R) &=  \int_{-R}^{R} V\left(N-1, \sqrt{R^2-x^2}\right)dx\\
+&=  \int_{-R}^{R} K_{N-1}\left(R^2-x^2\right)^\frac{N-1}{2}dx\\
+&=  K_{N-1}R^{N-1}\int_{-R}^{R} \left(1-\frac{x^2}{R^2}\right)^\frac{N-1}{2}dx
+\end{align}
+Change of variable $t=\frac{x}{R}$ gives  
+\begin{align}
+V(N, R) &=K_{N-1}R^{N}\int_{-1}^{1} \left(1-t^2\right)^\frac{N-1}{2}dt
+\end{align}
+putting $K_{N}=K_{N-1}\int_{-1}^{1} \left(1-t^2\right)^\frac{N-1}{2}dt$ , (independent of $R$) we get 
+\begin{align}
+V(N, R) &=K_{N}R^{N}
+\end{align}
+$$\lozenge$$
+As we have a space with positive definite metric form equipped with Cartesian coordinates we know that (see $\mathbf{7.402}$)
+$$dv_{(M)}= d\tau_{(M)}$$
+and from $\mathbf{7.320}$
+$$d\tau_{(N)}=d\tau_{(N)}^{1\dots N}$$
+hence the volume of the sphere will be 
+\begin{align}
+V = \int_{R_N} d\tau_{(N)}^{1\dots N}
+\end{align}
+let's put
+\begin{align}
+&T_{1\dots N-1,N} =  1\\
+\Rightarrow \quad &V = \int_{R_N} T_{1\dots N-1,N}d\tau_{(N)}^{1\dots N} 
+\end{align}
+Let's use the generalized Stokes formula
+\begin{align}
+\int_{R_N} T_{k_1\dots k_{N-1},k_N} d\tau_{(N)}^{k_1 \dots k_N} &= \int_{R_{N-1}} T_{k_1\dots k_{N-1}}d\tau_{(N-1)}^{k_1 \dots k_{N-1}}
+\end{align}
+by $(8)$ we have 
+\begin{align}
+T_{1\dots N-1} =  \int_{f_{lb}(z_{N})}^{f_{ub}(z_{N})}dz_{N} 
+\end{align}
+The integration in $(5)$ is done over a tube along the $z_{N}$ direction with a "base" $dz_{1}\dots dz_{N-1}$. Nothing the sign symmetry of the condition $z_pz_p \leq R^2$ we can take $0$  for the lower bound $f_{lb}(z_{N})$ and $f_{ub}(z_{N})^2 = R^2- z_{N-1}^2- z_{N-2}^2\dots  -z_{1}^2 $ as upper bound. Let's call this upper bound $\phi_{N}$ with $\phi_{N} =\left(R^2- z_{N-1}^2- z_{N-2}^2\dots  -z_{1}^2\right)^{\half}$
+giving for $(2)$
+\begin{align}
+V = 2\int_{R_{N-1}}\left(\int_{0}^{\phi_{N}}dz_{N}\right)d\tau_{(N-1)}^{1 \dots N-1}
+\end{align}
+Let's put $T_{1\dots N-2,N-1} = \int_{0}^{\phi_{N}}dz_{N}$. With the same reasoning from $(10)$ to $(12)$
+we get with 
+$$\phi_{N-1}^2 = \left(R^2 - z_{N-2}^2\dots  -z_{1}^2\right)$$  
+ 
+\begin{align}
+V = 2^2\int_{R_{N-2}}\left(\int_{0}^{\phi_{N-1}}\left(\int_{0}^{\phi_{N}}dz_{N}\right)dz_{N-1}\right)d\tau_{(N-2)}^{1 \dots N-2}
+\end{align}
+
+and repeating these steps, we get
+\begin{align}
+V = 2^N\int_{0}^{\phi_{1}}\left(\int_{0}^{\phi_{2}}\left[\int_{0}^{\phi_{3}}\dots\left(\int_{0}^{\phi_{N-1}}\left[\int_{0}^{\phi_{N}}dz_{N}\right ]dz_{N-1}\right)\dots dz^3\right]dz_2\right)\underbrace{d\tau_{(1)}^{1}}_{=dz_1}
+\end{align}
+We simplify the notation by omitting the brackets and noting that in the expression, this is not a mere multiplication of integrals
+\begin{align}
+V = 2^N\int_{0}^{\phi_{1}}dz_1\int_{0}^{\phi_{2}}dz_2\int_{0}^{\phi_{3}}dz_3\dots\int_{0}^{\phi_{N-1}}dz_{N-1}\int_{0}^{\phi_{N}}dz_{N}
+\end{align}
+with 
+$$\phi_{P}^2 = \left(R^2 - z_{P-1}^2\dots  -z_{1}^2\right)$$
+Let's now define $$F_P=\left(1- z_{P-1}^2- z_{P-2}^2\dots  -z_{1}^2\right)^{\half}$$
+It's easy to see that
+\begin{align}
+V = 2^N R^N \int_{0}^{F_{1}}dz_1\int_{0}^{F_{2}}dz_2\int_{0}^{F_{3}}dz_3\dots\int_{0}^{F_{N-1}}dz_{N-1}\int_{0}^{F_{N}}dz_{N}
+\end{align}
+This a direct consequence of $(6)$. Indeed $V(N, 1) =K_{N}1^{N}$ and $V(N, R) =K_{N}R^{N}$ and thus $V(N, R) =R^{N}V(N, 1)$. So it suffices to put $R=1$ in $(15)$ to get 
+\begin{align}
+V(N, 1) &= 2^N\int_{0}^{F_{1}}dz_1\int_{0}^{F_{2}}dz_2\int_{0}^{F_{3}}dz_3\dots\int_{0}^{F_{N-1}}dz_{N-1}\int_{0}^{F_{N}}dz_{N}\end{align}
+and with $V(N, R) =R^{N}V(N, 1)$ we get 
+\begin{align}
+V(N, R) &= R^N2^N\int_{0}^{F_{1}}dz_1\int_{0}^{F_{2}}dz_2\int_{0}^{F_{3}}dz_3\dots\int_{0}^{F_{N-1}}dz_{N-1}\int_{0}^{F_{N}}dz_{N}
+\end{align}
+We now rewrite $(18)$ as
+\begin{align}
+V(N, R) &= 2^NR^N\int_{0}^{F_{N}}dz_N\int_{0}^{F_{N-1}}dz_{N-1}\dots\int_{0}^{F_{2}}dz_{2}\int_{0}^{F_{1}}dz_{1}
+\end{align} 
+where 
+$$F_P=\left(1-z_{P+1}^2-\dots - z_N^2\right)^{\half}$$
+This is possible by Fubini's theorem, but this can also easily be deducted by starting the reasoning from $(8)$ on with $T_{N\dots 2,1} =  1$
+
+Let's now use 
+$$\int_0^{F_{P+1}} \left(F_P\right)^P dz_{P+1}=\frac{\pi^{\half}}{2}\frac{\Gamma\left(\half P+1\right)}{\Gamma\left(\half P+\frac{3}{2}\right)}\left(F_{P+1}\right)^{P+1}$$
+$(19)$ can be written with $P=0$ as 
+\begin{align}
+V(N, R) &= 2^N R^N\int_{0}^{F_{N}}dz_N\int_{0}^{F_{N-1}}dz_{N-1}\dots\int_{0}^{F_{2}}dz_{2}\frac{\pi^{\half}}{2}\frac{\Gamma\left(1\right)}{\Gamma\left(+\frac{3}{2}\right)}\left(F_{1}\right)^{1}\\
+&= 2^N R^N\frac{1}{2}\pi^{\half}\frac{\Gamma\left(1\right)}{\Gamma\left(+\frac{3}{2}\right)}\int_{0}^{F_{N}}dz_N\int_{0}^{F_{N-1}}dz_{N-1}\dots\int_{0}^{F_{2}}dz_{2}\left(F_{1}\right)^{1}
+\end{align}
+repeating  this with $P=1$
+\begin{align}
+V(N, R) &=2^N R^N\frac{1}{2^2}\pi^{2\half}\frac{\Gamma\left(1\right)}{\Gamma\left(\frac{3}{2}\right)}\frac{\Gamma\left(\frac{3}{2}\right)}{\Gamma\left( \frac{5}{2}\right)}\int_{0}^{F_{N}}dz_N\int_{0}^{F_{N-1}}dz_{N-1}\dots\int_{0}^{F_{3}}dz_{3}\left(F_{2}\right)^{2}
+\end{align}
+repeating this till $P= N-1$ gives 
+\begin{align}
+V(N, R) &=2^N R^N\frac{1}{2^N}\pi^{N\half}\frac{\Gamma\left(1\right)}{\Gamma\left(\frac{3}{2}\right)}\frac{\Gamma\left(\frac{3}{2}\right)}{\Gamma\left( \frac{4}{2}\right)}\frac{\Gamma\left(\frac{4}{2}\right)}{\Gamma\left( \frac{5}{2}\right)}\dots\frac{\Gamma\left(\half(N-2)+1\right)}{\Gamma\left(\half(N-2)+\frac{3}{2}\right)}\frac{\Gamma\left(\half(N-1)+1\right)}{\Gamma\left(\half(N-1)+\frac{3}{2}\right)}\\
+&= R^N\pi^{N\half}\frac{\Gamma\left(1\right)}{\Gamma\left(\half(N-1)+\frac{3}{2}\right)}\\
+&= R^N\pi^{N\half}\frac{\Gamma\left(1\right)}{\Gamma\left(\half N+1\right)}\\
+&= R^N\pi^{N\half}\frac{1}{\Gamma\left(\half N+1\right)}
+\end{align}
+$$\lozenge$$
+For $N=2$ we get with $\Gamma\left(2\right)=1$
+\begin{align}
+V(2, R) &= R^2\pi\frac{1}{\Gamma\left(2\right)}\\
+&= \pi R^2
+\end{align}
+and for $N=3$ we get with $\Gamma\left(\frac{5}{2}\right)=\frac{3\sqrt{\pi}}{4}$
+\begin{align}
+V(3, R) &= R^3\pi^{\frac{3}{2}}\frac{1}{\Gamma\left(\frac{5}{2}\right)}\\
+&= R^3\pi^{\frac{3}{2}}\frac{1}{\frac{3\sqrt{\pi}}{4}}\\
+&= \frac{4}{3}\pi R^3
+\end{align}
+$$\blacklozenge$$
+\newpage
+
+
+\section{p281 - Exercise 17}
+\begin{tcolorbox}
+In a flat $N-$space, as in exercise $16$, if we put $r^2=z_pz_p$, then $z_p=\partial_{z_p}\left(\half r^2\right)$, and the outward-drawn unit normal to the sphere $z_p z_p= R^2$ is $n_p= \frac{z_p}{R}$. Use these facts and Green's theorem to prove that
+$$\int r^2dV = \frac{N}{N+2}R^2 V$$ where the integral is taken throughout the interior of the sphere, and $V$ is the volume of the sphere.
+\end{tcolorbox}
+Let's immerse the  flat $N-$space in a flat $N+1-$space and consider a sphere $z_p z_p= R^{'2}$. Consider also the tensor $T^p=z_p$. We have  $T^p_{\ ,p}= N+1$. By Green's theorem we can write for the volume $V^{'}_{(N+1)} = \int_{V^{'}_{(N+1)}} dv^{'}_{(N+1)} $ of the $N+1-$sphere:
+\begin{align}
+V^{'}_{(N+1)} &= \frac{1}{N+1}\int_{V^{'}_{(N+1)}}T^p_{\ ,p} dv^{'}_{(N+1)} \\
+&=\frac{1}{N+1}\int_{V^{'}_{(N)}} T^p n_p v^{'}_{(N)} \\
+&=\frac{1}{N+1}\int_{V^{'}_{(N)}} z_p\frac{z_p}{R^{'}} v^{'}_{(N)} \\
+&=\frac{1}{R^{'}\left(N+1\right)}\int_{V^{'}_{(N)} } r^2 v^{'}_{(N)}
+\end{align}
+giving
+\begin{align}
+\int_{V_{(N)}} r^2 dv_{(N)}&=R^{'}\left(N+1\right)V_{(N+1)} 
+\end{align}
+By exercise $16$ we can write
+\begin{align}
+V_{(N+1)} = \pi^{\half\left(N+1\right)} \frac{R^{'N+1}}{\Gamma \left(\half\left(N+1\right)+1\right)}
+\end{align} 
+
+Using the functional expression of the Gamma function $\Gamma\left(p+1\right) = p\Gamma\left(p\right)$, 
+$(6)$ becomes
+\begin{align}
+V_{(N+1)} = \pi^{\half\left(N+1\right)} \frac{2}{\left(N+1\right)\Gamma \left(\half\left(N+1\right)\right)}R^{'N+1}
+\end{align}  
+and thus 
+\begin{align}
+\int_{V_{(N)}} r^2 dv_{(N)}&=\pi^{\half\left(N+1\right)} \frac{2N}{\Gamma \left(\half\left(N+1\right)\right)}R^{'}R^{'N+1}\\
+&=N R^{'2 }\frac{2\pi^{\half\left(N+1\right)}}{\Gamma \left(\half\left(N+1\right)\right)}R^{'N}
+\end{align}
+
+The expression $(8)$ "lives" in the $n+1-$space.
+
+The sphere in the $N+1-$ space has an area equal to
+$$S^{'}_{N}= \frac{2\pi^{\half(N+1)}}{\Gamma\left(\half (N+1)\right)}R^{'N}$$
+The volumes of the the sphere in the $N-$space is
+\begin{align}
+V^{}_{(N)} = \pi^{\half N} \frac{R^{N}}{\Gamma \left(\half N+1\right)}
+\end{align}
+
+and $(9)$ becomes
+
+\begin{align}
+\int_{V_{(N)}} r^2 dv_{(N)}&=N V^{}_{(N)} R^{'2 }
+\end{align}
+as $S^{'}_N=V^{}_N$ we get
+
+\begin{align}
+& \pi^{\half N} \frac{R^{N}}{\Gamma \left(\half N+1\right)}=\frac{2\pi^{\half(N+1)}}{\Gamma\left(\half (N+1)\right)}R^{'N}\\
+\Rightarrow \quad & R^{'N} =\half\sqrt{\pi}\frac{\Gamma\left(\half (N+1)\right)}{\Gamma \left(\half N+1\right)}R^{N}
+\end{align}
+Let's compute further $\Gamma\left(\half (N+1)\right)$ and $\Gamma \left(\half N+1\right)$ with $p=\half N$
+\begin{align}
+\Gamma\left(\half (N+1)\right) &= \Gamma\left(p+ \half \right)\\
+&= \Gamma\left(p-\half+1 \right)\\
+&= \left(p-\half\right)\Gamma\left(p-\half \right)\\
+&= \left(p-\half\right)\Gamma\left(p-\frac{3}{2} +1\right)\\
+&= \left(p-\half\right)\left(p-\frac{3}{2}\right)\Gamma\left(p-\frac{3}{2} \right)\\
+&\vdots\\ 
+&= \left(p-\half\right)\left(p-\frac{3}{2}\right)\dots \left(p-\frac{2 k_{max}-1}{2}\right)\Gamma\left(p-\frac{2 k_{max}-1}{2} \right)
+\end{align}
+where $ p-\frac{2 k_{max}-1}{2}$ is equal to $2$ or $\half$ depending on whether $N$ is odd or even.
+This gives two possibilities
+\begin{align}
+\left\{\begin{array}{ll}
+\Gamma\left(\half (N+1)\right) = \left(p-\half\right)\left(p-\frac{3}{2}\right)\dots \left(p-\frac{2 k_{max}-1}{2}\right)\Gamma\left(\half  \right)& \text{( N = even)}\\\\
+\Gamma\left(\half (N+1)\right) = \left(p-\half\right)\left(p-\frac{3}{2}\right)\dots \left(p-\frac{2 k_{max}-1}{2}\right)\Gamma\left(2 \right)& \text{( N = odd)}\\
+\end{array}\right.
+\end{align}
+giving
+\begin{align}
+\left\{\begin{array}{ll}
+\Gamma\left(\half (N+1)\right) =\left(\half\right)^{p }\left(2p-1\right)\left(2p-3\right)\left(2p-5\right)\dots (3)(2)\sqrt{\pi}& \text{( N = even)}\\\\
+\Gamma\left(\half (N+1)\right) = \left(\half\right)^{p -\half}\left(2p-1\right)\left(2p-3\right)\left(2p-5\right)\dots  (4)(2)(1)& \text{( N = odd)}\\
+\end{array}\right.
+\end{align}
+and for $\Gamma\left(\half N+1)\right)$
+\begin{align}
+\Gamma\left(\half N+1)\right) &= \Gamma\left(p+ 1\right)\\
+&= \Gamma\left(p-1+1 \right)\\
+&= \left(p-1\right)\Gamma\left(p-1 \right)\\
+&= \left(p-1\right)\Gamma\left(p-2 +1\right)\\
+&= \left(p-1\right)\left(p-2\right)\Gamma\left(p-2 \right)\\
+&\vdots\\ 
+&= \left(p-1\right)\left(p-2\right)\dots \left(p- k_{max}\right)\Gamma\left(p- k_{max}\right)
+\end{align}
+where $ p- k_{max}$ is equal to $1$ or $\half$ depending on whether $N$ is odd or even.
+This gives two possibilities
+\begin{align}
+\left\{\begin{array}{ll}
+\Gamma\left(\half N+1)\right) = \left(p-1\right)\left(p-2\right)\dots (2)(1)\Gamma\left(1  \right)& \text{( N = even)}\\\\
+\Gamma\left(\half N+1)\right) = \left(p-1\right)\left(p-2\right)\dots \left(\frac{3}{2}\right)\left( \half\right)\Gamma\left(\half \right)& \text{( N = odd)}\\
+\end{array}\right.
+\end{align}
+giving
+\begin{align}
+\left\{\begin{array}{ll}
+\Gamma\left(\half N+1)\right) = 2^{p-1}\left(2p-2\right)\left(2p-2\right)\dots (4)(2)& \text{( N = even)}\\\\
+\Gamma\left(\half N+1)\right) = 2^{p}\left(2p-2\right)\left(2p-4\right)\dots \left(3\right)\left( 1\right)\sqrt{\pi}& \text{( N = odd)}\\
+\end{array}\right.
+\end{align}
+giving 
+\begin{align}
+\left\{\begin{array}{ll}
+\frac{\Gamma\left(\half (N+1)\right)}{\Gamma \left(\half N+1\right)}= \frac{\left(\half\right)^{p }\left(2p-1\right)\left(2p-3\right)\left(2p-5\right)\dots (3)(2)\sqrt{\pi}}{2^{p-1}\left(2p-2\right)\left(2p-2\right)\dots (4)(2)}& \text{( N = even)}\\\\
+\frac{\Gamma\left(\half (N+1)\right)}{\Gamma \left(\half N+1\right)} = \frac{\left(\half\right)^{p -\half}\left(2p-1\right)\left(2p-3\right)\left(2p-5\right)\dots  (3)(2)(1)}{2^{p}\left(2p-2\right)\left(2p-4\right)\dots \left(3\right)\left( 1\right)\sqrt{\pi}}& \text{( N = odd)}\\
+\end{array}\right.
+\end{align}
+$$\blacklozenge$$
+\newpage
+
